Slipped some java 17 code. This should fix #2